improve: auth + jwt * role based access => admin / moderator * save user data => mongo